Made small styling changes

--- a/emotions/index.html
+++ b/emotions/index.html
@@ -13,11 +13,15 @@
     <body class="body_class">
 
         <div id="wrapper">
-            <video id="video", width="720", height="560" autoplay muted></video>
-
+            <img src="./images/neutral.svg" id="current_emotion">
+<!-- 720
+560 -->
+            <div id="face">
+                <video id="video", width="540", height="420" autoplay muted></video>
+            </div>
             
-             <img src="./images/neutral.svg" id="current_emotion">
-             <img src="./images/happy.svg" style="display: none;" id="test">
+
+             <!-- <img src="./images/happy.svg" style="display: none;" id="test"> -->
         </div>
     </body>
 
