--- a/emotions/index.html
+++ b/emotions/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body class="body_class">
-
+        <h1 id = "welcomeMsg">Welcome to our Emotion Detector AI!</h1>
         <div id="wrapper">
             <img src="./images/neutral.svg" id="current_emotion">
 <!-- 720
