--- a/emotions/index.html
+++ b/emotions/index.html
@@ -13,15 +13,10 @@
     <body class="body_class">
         <h1 id = "welcomeMsg">Welcome to our Emotion Detector AI!</h1>
         <div id="wrapper">
-            <img src="./images/neutral.svg" id="current_emotion">
-<!-- 720
-560 -->
-            <div id="face">
-                <video id="video", width="540", height="420" autoplay muted></video>
-            </div>
-            
-
-             <!-- <img src="./images/happy.svg" style="display: none;" id="test"> -->
+                <div id="face">
+                    <video id="video", width="540", height="420" autoplay muted></video>
+                </div>
+                <img src="./images2/Neutral.png" id="current_emotion">
         </div>
     </body>
 
